--- a/plugins/card-board/styles.css
+++ b/plugins/card-board/styles.css
@@ -11,9 +11,25 @@
   --text-title-h1: var(--text-normal);
 }
 
-.card-board {
+.workspace-leaf-content[data-type='card-board-view'] .view-content {
+  padding: 0;
+  overflow: hidden;
+}
+
+.card-board-container .modal.mod-settings .vertical-tab-header::before {
+  display: none;
+}
+
+.card-board-container .modal.mod-settings .vertical-tab-header::after {
+  display: none;
+  content: "";
+}
+
+.card-board-view {
   height: 100%;
   background-color: var(--background-primary);
+  padding: var(--file-margins);
+  font-size: var(--font-normal);
 }
 
 ul.card-board-tab-list {
@@ -96,7 +112,7 @@ li.is-after-active .card-board-tabs-inner {
 
 .card-board-columns {
   display: grid;
-  grid-auto-columns: minmax(272px, 1fr);
+  grid-auto-columns: minmax(20em, 1fr);
   grid-auto-flow: column;
   grid-gap: 1em;
   margin-right: 1em;
@@ -110,7 +126,6 @@ li.is-after-active .card-board-tabs-inner {
 }
 .card-board-column-header {
   font-weight: var(--bold-weight);
-  font-size: var(--font-normal);
   margin-bottom: 1em;
 }
 
@@ -128,11 +143,13 @@ ul.card-board-column-list > li.card-board-card::before {
   content: "";
 }
 
-.card-board-card.markdown-preview-view {
+.card-board-card {
   border-radius: 3px;
   border: var(--border-width) solid var(--background-modifier-border);
   background-color: var(--background-primary);
   padding: 0;
+  user-select: text;
+  -webkit-user-select: text;
   grid-column-gap: 0.25em;
   display: grid;
   grid: "mark contents"
@@ -169,7 +186,6 @@ ul.card-board-column-list > li.card-board-card::before {
 
 .card-board-card-tag-area {
   grid-area: tags;
-  font-size: var(--font-small);
   margin-bottom: 0.5em;
 }
 
@@ -182,7 +198,6 @@ ul.card-board-column-list > li.card-board-card::before {
     background-color: var(--background-secondary-alt);
     border: 1px solid var(--background-modifier-border);
     color: var(--text-muted);
-    font-size: var(--font-adaptive-small);
     font-family: var(--font-ui);
     text-align: center;
     text-decoration: none;
@@ -213,26 +228,25 @@ div.card-board-card-tag > span.cm-hashtag.cm-hashtag-end {
     border-right: 1px solid var(--background-modifier-border);
 }
 
-.card-board-card.markdown-preview-view .task-list-item-checkbox {
+.card-board-card input.task-list-item-checkbox {
   grid-area: checkbox;
-  position: static;
-  margin: 0;
-  margin-right: 0.5em;
-  margin-top: 0.25em;
-  height: 1em;
+  align-self: top;
+  margin-top: 0.2em;
   width: 1em;
+  height: 1em;
+  font-size: 1em;
 }
 
-
-/* fixes alignment of checkbox ticks on california coast theme */
-.card-board-card-content-area > input[type="checkbox"]:checked:before {
-  position:static;
+.card-board-card input.task-list-item-checkbox:after {
+  width: 1em;
+  height: 1em;
+  font-size: 1em;
 }
+
 
 .card-board-card-title {
   grid-area: title;
   font-weight: var(--bold-weight);
-  font-size: var(--font-normal);
   display: -webkit-box;
   color: var(--text-title-h1);
   -webkit-line-clamp: 2;
@@ -280,6 +294,13 @@ div.card-board-card-tag > span.cm-hashtag.cm-hashtag-end {
   border-style: none;
 }
 
+.card-board-card-notes-area button {
+  font-size: var(--font-small);
+  padding: 0.5em 0.5em;
+  line-height: 1em;
+  height: auto;
+}
+
 .card-board-card-footer-area {
   grid-area: footer;
   display: grid;
@@ -305,7 +326,7 @@ div.card-board-card-tag > span.cm-hashtag.cm-hashtag-end {
   cursor: pointer;
 }
 
-.card-board .modal-content {
+.card-board-view .modal-content {
   display: grid;
   grid: "select form"
         / 200px auto;
@@ -332,7 +353,7 @@ div.card-board-card-tag > span.cm-hashtag.cm-hashtag-end {
   padding-top: 1.5em;
 }
 
-.card-board .vertical-tab-nav-item {
+.card-board-view .vertical-tab-nav-item {
   padding-right: 1.5em;
 }
 
@@ -380,13 +401,14 @@ div.card-board-card-tag > span.cm-hashtag.cm-hashtag-end {
   border-top: 1px solid var(--background-modifier-border);
 }
 
-.card-board .setting-item:first-child {
+.card-board-view .setting-item:first-child {
   padding-top: 0;
   border-top: none;
 }
 
-.card-board .setting-item {
+.card-board-view .setting-item.new-section {
   padding: 18px 0 18px 0;
+  margin-top: 5px;
   border-top: 1px solid var(--background-modifier-border);
 }
 
@@ -473,7 +495,7 @@ div.card-board-card-tag > span.cm-hashtag.cm-hashtag-end {
   vertical-align: middle;
 }
 
-.card-board .suggestion-container {
+.card-board-view .suggestion-container {
   display: grid;
   grid-auto-flow: row;
   grid-gap: 0.5em;
@@ -484,23 +506,23 @@ div.card-board-card-tag > span.cm-hashtag.cm-hashtag-end {
   line-height: 1em;
 }
 
-.card-board .suggestion-section {
+.card-board-view .suggestion-section {
   border-top: 1px solid var(--background-modifier-border);
   padding-top: 0.5em;
 }
 
-.card-board .suggestion-section:first-child {
+.card-board-view .suggestion-section:first-child {
   border-top: none;
 }
 
-.card-board .suggestion-section-heading {
+.card-board-view .suggestion-section-heading {
   color: var(--text-faint);
   font-size: var(--font-smaller);
   font-weight: var(--bold-weight);
   margin-bottom: 3px;
 }
 
-.card-board .suggestion-item {
+.card-board-view .suggestion-item {
   padding-left: 5px;
   font-size: var(--font-small);
   line-height: 1.3em;
